--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,32 @@
 {
   "compilerOptions": {
+    // 상대적이지 않은 모듈 이름을 확인할 기본 디렉터리를 설정합니다. 
     "baseUrl": "./",
+    // 어떤 브라우저 지원 목표로 하는지
     "target": "esnext",
+    // 이 플래그는 곧 출시될 클래스 필드의 표준 버전으로 마이그레이션하는 과정의 일부로 사용됩니다.
     "useDefineForClassFields": true,
+    // 어떤 모듈 생성 목표로 하는지
     "module": "esnext",
+    // TypeScript가 주어진 모듈 지정자에서 파일을 찾는 방법을 지정합니다.
     "moduleResolution": "node",
+    // 각 파일을 다른 가져오기에 의존하지 않고 안전하게 변환할 수 있는지 확인합니다.
     "isolatedModules": true,
+    // 타입 체크를 엄격히
     "strict": true,
+    // 생성되는 JSX 코드를 지정합니다. preserve: 보존하다(??)
     "jsx": "preserve",
+    // 반응 JSX 방출 대상에 사용되는 JSX 공장 기능(예: 'React.createElement' 또는 'h')을 지정합니다
     "jsxFactory": "h",
+    // React.Fragment' 또는 'Fragment'와 같이 React JSX 방출을 대상으로 할 때 fragment에 사용되는 JSX Fragment 참조를 지정합니다.
     "jsxFragmentFactory": "Fragment",
+    // 내보낸 자바스크립트 파일에 대한 소스 맵 파일을 만듭니다.
     "sourceMap": true,
+    // json 파일 import 할 수 있는지
     "resolveJsonModule": true,
+    // CommonJS 모듈 가져오기를 쉽게 지원하기 위해 추가 JavaScript를 내보냅니다. 이를 통해 유형 호환성에 대해 SyntheticDefaultImports를 허용합니다.
     "esModuleInterop": true,
+    // 파일 import 경로
     "paths": {
       "@/*": ["src/*"],
       "@layouts/*": ["src/@layouts/*"],
@@ -21,10 +35,18 @@
       "@core": ["src/@core"],
       "@axios": ["src/plugins/axios"]
     },
+    // 대상 런타임 환경을 설명하는 번들 라이브러리 선언 파일 집합을 지정합니다.
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
+    // 모든 .d.ts 파일을 확인하는 형식을 생략합니다.
     "skipLibCheck": true,
+    // 원본 파일에서 참조되지 않고 포함할 유형 패키지 이름을 지정합니다.
     "types": ["vite/client", "vite-plugin-pages/client", "vite-plugin-vue-layouts/client"]
   },
+  /* 컴파일에 포함할 파일과 일치하는 전역 패턴 목록을 지정합니다.
+  tsconfig.json에 'files' 또는 'include' 속성이 없으면 컴파일러는 기본적으로 'exclude'로 지정된 파일을 제외하고 포함하는 디렉터리 및 하위 디렉터리에 모든 파일을 포함합니다.
+  TypeScript 버전 2.0 이상이 필요합니다. */
   "include": ["vite.config.*", "env.d.ts", "shims.d.ts", "src/**/*", "src/**/*.vue", "themeConfig.ts"],
+  /* 컴파일에서 제외할 파일 목록을 지정합니다. '제외' 속성은 'include' 속성을 통해서만 영향을 미치며 'files' 속성은 영향을 주지 않습니다.
+  Glob 패턴에는 TypeScript 버전 2.0 이상이 필요합니다. */
   "exclude": ["dist", "node_modules", "src/@iconify/*"]
 }
